--- a/argo-application/application.yaml
+++ b/argo-application/application.yaml
@@ -2,10 +2,10 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   annotations:
-    argocd-image-updater.argoproj.io/image-list: image-updater-test=gcr.io/gcp-poc-321808/image-updater-test
+    argocd-image-updater.argoproj.io/image-list: image-updater-test=gcr.io/gcp-poc-321808/tokko-certifier
     argocd-image-updater.argoproj.io/image-updater-test.update-strategy: latest
-    argocd-image-updater.argoproj.io/image-updater-test.allow-tags: regexp:^test*
-     argocd-image-updater.argoproj.io/write-back-method: git:secret:argo-ns/github-repo-creds
+    # argocd-image-updater.argoproj.io/image-updater-test.allow-tags: regexp:^test*
+    argocd-image-updater.argoproj.io/write-back-method: git:secret:argo-ns/github-repo-creds
   name: image-updater-test
   namespace: argo-ns
 spec:
@@ -16,7 +16,7 @@ spec:
     path: application/
   destination:
     server: https://kubernetes.default.svc
-    namespace: master
+    namespace: asher
   syncPolicy:
     automated:
       prune: true
